
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2007 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd HEAD

  - Fixed code that prevented GCC 2.95 to compile ngIRCd.
  - Adjust path names in manual pages according to "./configure" settings.
  - Added new server configuration option "Passive" for "Server" blocks to
    disable automatic outgoing connections (similar to -p option to ngircd,
    but only for the specified server). (Tassilo Schweyer)
  - Don't connect to a server if a connection to another server within the
    same group is already in progress.
  - Added support for the WALLOPS command. Usage is restricted to IRC
    operators.

ngIRCd 0.10.3 (2007-08-01)

  - SECURITY: Fixed a severe bug in handling JOIN commands, which could
    cause the server to crash. Thanks to Sebastian Vesper, <net@veoson.net>.

ngIRCd 0.10.2 (2007-06-08)

  ngIRCd 0.10.2-pre2 (2007-05-19)
  - Server links are allowed to use larger write buffers now (up to 50 KB).

  ngIRCd 0.10.2-pre1 (2007-05-05)
  - Fix compressed server links (broken since 0.10.0).
  - Predefined Channel configuration now allows specification of channel key
    (mode k) and maximum user count (mode l).
  - When using epoll() IO interface, compile in the select() interface as
    well and fall back to it when epoll() isn't available on runtime.
  - New configure option "--without-select" to disable select() IO API
    (even when using epoll(), see above).
  - Added support for IO APIs "poll()" and "/dev/poll".
  - Reorganized internal handling of invite and ban lists.

ngIRCd 0.10.1 (2006-12-17)

  - Fixed validation of server names containing digits.
  - Update the "info text" of the local server after re-reading configuration.