@@ -12,6 +12,7 @@
 
 ngIRCd HEAD
 
+  - Numeric 317: implemented "signon time" (displayed in WHOIS result).
   - Fixed code that prevented GCC 2.95 to compile ngIRCd.
   - Adjust path names in manual pages according to "./configure" settings.
   - Added new server configuration option "Passive" for "Server" blocks to
@@ -706,4 +707,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.322 2007/10/04 10:14:52 alex Exp $
+$Id: ChangeLog,v 1.323 2007/10/04 15:03:55 alex Exp $
